--- a/CSS/7.2_refactor_with_floatsAssignment/style/style.css
+++ b/CSS/7.2_refactor_with_floatsAssignment/style/style.css
@@ -34,7 +34,7 @@ header {
 #header-container {
   height: 70px;
   width: 100%;
-  background-image: url('/ofers_utils/ofer_logo_yellow.png');
+  background-image: url('https://raw.githubusercontent.com/OferTauber/My-Utils/main/logo-y.png');
   background-size: 70px;
   background-repeat: no-repeat;
   background-position: 30px;
