--- a/React/may17/src/App.css
+++ b/React/may17/src/App.css
@@ -1,42 +1,88 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 :root {
   --base-color: gray;
   --front-color: rgb(18, 248, 141);
   --background-color: #333;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height: 95vh;
-  width: 95vw;
-  background-color: var(--background-color);
-}
-
-h1 {
-  color: #f3f3f3;
+.App {
   text-align: center;
-  margin: 50px 0;
 }
 
-.flex-container {
-  max-width: 800px;
-  margin: auto;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.flex-item {
-  margin-bottom: 40px;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.pop-box {
+  background-color: blueviolet;
+  -webkit-animation: roll-in-left 0.6s ease-out both;
+  animation: roll-in-left 0.6s ease-out both;
+  margin: 10px;
+}
+
+@-webkit-keyframes roll-in-left {
+  0% {
+    -webkit-transform: translateX(-800px) rotate(-540deg);
+    transform: translateX(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+@keyframes roll-in-left {
+  0% {
+    -webkit-transform: translateX(-800px) rotate(-540deg);
+    transform: translateX(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+    transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+
+.std-size {
+  height: 100px;
+  width: 100px;
 }
 
 .spinner {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   margin: 20px;
 }
 
@@ -83,7 +129,7 @@ h1 {
 }
 
 .dot {
-  height: 20px;
+  height: 15px;
   width: 20px;
   background-color: var(--base-color);
   border-radius: 50%;
